--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Social</title>
+    <title>Projeto Redes Sociais</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="favicon.ico">
 </head>
 <body>
-    <h1>Olá, Mundo</h1>
+    <main>
+        <section id="cel">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+        </section>
+        <section id="rs">
+
+        </section>
+    </main>
 </body>
 </html>
